--- a/web/build.gradle
+++ b/web/build.gradle
@@ -5,5 +5,6 @@ jar {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.cloud:spring-cloud-starter-eureka')
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 }
