--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -5,3 +5,10 @@ server:
 spring:
   application:
     name: rest
+
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:9000/eurekaserver/eureka/
