add first implementation for client

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -9,4 +9,5 @@ bootRepackage {
 
 dependencies {
     compile('org.springframework:spring-web')
+    compile('org.springframework.cloud:spring-cloud-commons')
 }
