--- a/zuul/build.gradle
+++ b/zuul/build.gradle
@@ -5,6 +5,6 @@ jar {
 
 dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-zuul')
-    //compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.cloud:spring-cloud-starter-eureka')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
